--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,37 @@
 {
-    "name": "phpbenchmarks/phpixie",
-    "license": "proprietary",
+    "name": "phpixie/project",
     "type": "project",
+    "description": "PHPixie skeleton project",
+    "license": "BSD-3-Clause",
+    "autoload": {
+        "psr-4": {
+            "": [
+                "src/",
+                "tests/"
+            ],
+            "Project\\App\\": [
+                "bundles/app/src/"
+            ]
+        }
+    },
     "require": {
+        "phpixie/default-bundle": "~3.2",
+        "phpixie/bundle-framework": "~3.6",
+        "phpixie/framework-bundle": "~3.3",
         "phpbenchmarks/phpixie-common": "dev-phpixie_3_prepare"
+    },
+    "require-dev": {
+        "phpixie/test": "~3.0"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "3.*-dev"
+        }
+    },
+    "scripts": {
+        "post-create-project-cmd": [
+            "php ./console framework:generateBundle app",
+            "php ./console framework:installWebAssets"
+        ]
     }
 }
